--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intelligent Calculator</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Intelligent calculator</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="woodCalc.css"> -->
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="root">
