--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="./Calculator-using-HTML-CSS-and-JS-master/calculator.html">Product</a></li>
+                <li><a href="about.html"=>About</a></li>
                
             </ul>
         </nav>
